# riscv_disasm_from_sail

./: .ocamlformat  README.md  RISCV_AST_DEF.c  a.out  dune-project  libsail.opam.locked  riscv_ast.gen.inc  riscv_decode.gen.inc  riscv_disasm_from_sail.opam  sail.filepaths.txt  sail.hash.txt  sail.instr_types_excluded_enums.txt  test_filepaths.txt
.github/workflows/: end2end-smoke-test.yml
lib/: assembler.ml  clike_ast.ml  clike_typedef.ml  common_types.ml  constants.ml  decode_procedure.ml  decoder.ml  dune  gen_assembler.ml  gen_assembler.mli  gen_clike_typedef.ml  gen_clike_typedef.mli  gen_decoder.ml  gen_decoder.mli  gen_disasm.ml  gen_disasm.mli  gen_instr_types.ml  gen_operand_info.ml  hashset.ml  sail_analysis.ml  sail_analysis.mli  sail_ast_foreach.ml  sail_ast_foreach.mli  sail_ast_processor.ml  sail_ast_utils.ml  sail_ast_visitor.ml  sail_ast_visitor.mli  sail_utils.ml  stringify.ml  utils.ml
riscv_disasm/: riscv_ast.gen.inc  riscv_ast2str.gen.inc  riscv_ast2str_tbls.gen.inc  riscv_decode.gen.inc  riscv_decode_compressed.gen.inc  riscv_insn.gen.inc  riscv_insn_mapping.gen.inc
test/: dune
tools/: riscv-ls.sh
